# Playground-Demo-Crypto

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
SwiftChachaPoly/: build.gradle.kts
SwiftChachaPoly/SwiftChachaPoly/: DataResult.swift  SwiftChachaPoly.swift
SwiftChachaPoly/SwiftChachaPoly.xcodeproj/: project.pbxproj
secp256k1/: build-android.sh  build-ios.sh  build.gradle.kts
src/androidMain/: AndroidManifest.xml
src/androidMain/cpp/: CMakeLists.txt  secp256k1-jni.cpp
src/androidMain/kotlin/net/kodein/demo/crypto/: Chacha20Poly1305.kt  Secp256k1.kt  Secp256k1Jni.kt  sha256.kt
src/commonMain/kotlin/net/kodein/demo/crypto/: Chacha20Poly1305.kt  Digest.kt  Secp256k1.kt  Sha256.kt  utils.kt
src/commonTest/kotlin/net/kodein/demo/crypto/: ChachaPolyTests.kt  Secp256k1Tests.kt  Sha256Tests.kt
src/iosMain/kotlin/net/kodein/demo/crypto/: Chacha20Poly1305.kt  Secp256k1.kt  sha256.kt
src/iosTest/kotlin/net/kodein/demo/crypto/: empty.kt
src/nativeInterop/cinterop/: secp256k1.def  swiftChachaPoly.def
